--- a/product/templates/product/base.html
+++ b/product/templates/product/base.html
@@ -32,7 +32,7 @@
                         <a class="nav-link active" aria-current="page" href="{% url 'product_list' %}">Главная страница </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="http://127.0.0.1:6000/admin/">Админ панель</a>
+                        <a class="nav-link" href="{% url 'admin:index' %}">Админ панель</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
